manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deploy
  labels:
    app: todo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo-cont
        image: itdeepikar747/todo:v1
        ports:
        - containerPort: 5000
