manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: todo-app
spec:
  containers:
  - name: todo-app
    image: itdeepikar747/todo:v1
    ports:
    - containerPort: 5000
