manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  type: LoadBalancer
  selector:
    app: todo
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
