manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  rules:
  - host: "dee.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-service
            port:
              number: 80
